Added bower dependencies angular-resource, bootstrap, jquery, underscore

--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,10 @@
     "angular": "1.2.x",
     "angular-route": "1.2.x",
     "angular-loader": "1.2.x",
-    "angular-mocks": "~1.2.x"
+    "angular-mocks": "~1.2.x",
+    "angular-resource": "1.2.x",
+    "bootstrap": "3.2.x",
+    "jquery": "2.1.x",
+    "underscore": "1.6.x"
   }
 }
