persist drafted data using angular-local-storage

--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "angular-resource": "1.2.x",
     "bootstrap": "3.2.x",
     "jquery": "2.1.x",
-    "underscore": "1.6.x"
+    "underscore": "1.6.x",
+    "angular-local-storage": "~0.0.7"
   }
 }
